Server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
